trying to fix the mobile scroll with 'body' having hidden overflow on x axis.

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,10 @@ html, body{
   //overflow-x: hidden;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 
 
 #app {
